--- a/styling.css
+++ b/styling.css
@@ -1,22 +1,24 @@
 :root {
   --background-color: #1F1F1E;
-  --content-background-color: #f5f5f5;
+  --content-background-color: #e7e7e7;
   --content-border-color: #000000;
   --entry-color: #252525;
-  --placeholder-color: #000000;
+  --placeholder-color: #ececec;
 }
 
-* {
+*, *::before, *::after {
   box-sizing: border-box;
 }
 
 body, html {
   height: 100%;
   margin: 0;
-  padding: 20px;
+  padding: 0;
   background-color: var(--background-color);
+  justify-content: flex-end;
   position: relative;
   font-family: 'Inter', sans-serif;
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 body::before {
@@ -27,23 +29,10 @@ body::before {
   right: 0;
   bottom: 0;
   z-index: -1;
-  background-image: url('https://images.unsplash.com/photo-1621508727844-09cc245de555?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2574&q=80');
-  opacity: 0.2;
 }
 
 .bold-text {
   font-weight: 700;
-}
-
-body.dark-mode {
-  /* set your dark mode styles here */
-  background-color: #252525;
-  color: #f5f5f5;
-}
-
-body.dark-mode #journal-entry {
-  background-color: #252525;
-  color: #f5f5f5;
 }
 
 .content {
@@ -55,8 +44,7 @@ body.dark-mode #journal-entry {
   padding: 20px;
   border: 4px solid var(--content-border-color);
   border-radius: 10px;
-  /*position: relative;  /* Required for z-index to work properly */
-  z-index: 1000;  /* Adjusted z-index */
+  z-index: 1000;
 }
 
 #journal-entry {
@@ -74,6 +62,7 @@ body.dark-mode #journal-entry {
   position: relative;
   border-radius: 20px;
   font-family: 'Inter', sans-serif;
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 #journal-entry::placeholder {
@@ -160,17 +149,6 @@ body.dark-mode #journal-entry {
   transform: translate(100%, -50%);
 }
 
-body.dark-mode {
-  /* set your dark mode styles here */
-  background-color: #252525;
-  color: #f5f5f5;
-}
-
-body.dark-mode #journal-entry {
-  background-color: #252525;
-  color: #f5f5f5;
-}
-
 .toggle-label i {
   display: none;
 }
@@ -197,6 +175,21 @@ body.dark-mode #journal-entry {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 3000;  /* Highest z-index */
+  z-index: 3000;
 }
 
+body.dark-mode {
+  background-color: #252525;
+  color: #f5f5f5;
+}
+
+body.dark-mode #journal-entry {
+  background-color: #252525;
+  color: #f5f5f5;
+}
+
+body.dark-mode .content {
+  background-color: #161616;
+  color: #f5f5f5;
+  border-color: #444444;
+}
